<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_state_number" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search" 
            android:textColor="@color/Blue"/>

        <Button
            android:id="@+id/bookmark_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bkmk_it"
            android:textColor="@color/Blue" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/statedata"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:columnCount="2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state" 
            android:textColor="@color/Red"/>

        <TextView
            android:id="@+id/state_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_population_"
            android:textColor="@color/Red" />

        <TextView
            android:id="@+id/state_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white_" 
            android:textColor="@color/Red"/>

        <TextView
            android:id="@+id/white_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black_"
            android:textColor="@color/Red" />

        <TextView
            android:id="@+id/black_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/native_american_"
            android:textColor="@color/Red" />

        <TextView
            android:id="@+id/native_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_"
            android:textColor="@color/Red" />

        <TextView
            android:id="@+id/other_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Red" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state_codes_start_at_01_for_alabama_and_continue_in_order" />
    <Button
        android:id="@+id/service_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_from_mapquest"
        android:textColor="@color/Blue"
        android:onClick="onClick" />


    <Button
        android:id="@+id/addbkmk_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_bookmarks"
        android:textColor="@color/Blue" />

</LinearLayout>